menambahkan script-jquery.js

--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@
 
     <!-- jquery -->
     <script src="js/jquery-3.6.0.min.js"></script>
+    <!-- script jquery -->
+    <script src="js/script-jquery.js"></script>
     <!-- slick js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <!-- Swiper JS -->
