--- a/login.html
+++ b/login.html
@@ -98,14 +98,14 @@
 
             <div class="field">
               <i class="uil uil-lock"></i>
-              <input class="password-input" type="password" name="password" placeholder="password" required />
-              <div class="btn-eye"><i class="uil uil-eye-slash"></i></div>
+              <input class="password-input-signup" type="password" name="password" placeholder="password" required />
+              <div class="btn-eye-signup"><i class="uil uil-eye-slash"></i></div>
             </div>
 
             <div class="field">
               <i class="uil uil-lock"></i>
-              <input class="password-input" type="password" name="password2" placeholder="konfirmasi password" required />
-              <div class="btn-eye"><i class="uil uil-eye-slash"></i></div>
+              <input class="password-input-conf" type="password" name="password2" placeholder="konfirmasi password" required />
+              <div class="btn-eye-conf"><i class="uil uil-eye-slash"></i></div>
             </div>
 
             <input class="btn" type="submit" value="sign up" />
